# c-sample

./: .gitignore  Makefile  add.c  addDemo.c  configure.ac  heymath.h  sub.c
am-sample/: README
am-sample/src/: Makefile.am  main.c
make-sample/: Makefile.android  add.c  addDemo.c
src/: Makefile.am  add.c
